--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 
+<head>
+    <link rel="stylesheet" href="./styles.css">
+</head>
+
 <!-- h1{Lista de tecnologias web}+div.container>ul>li.item*3>a[href="https://es.wikipedia.org/wiki/"] -->
 
 <h1>Lista de tecnologias web</h1>
