añadida otra tecnologia web

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <li class="item">
             <a href="https://es.wikipedia.org/wiki/javascript">JavaScript</a>
         </li>
+        <li class="item">
+            <a href="https://es.wikipedia.org/wiki/TypeScript">TypeScript</a>
+        </li>
     </ul>
 </div>
 
